Add responsiveness to landing page

--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@hugeicons/react-pro": "^0.2.6",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "classnames": "^2.5.1",
+    "hamburger-react": "^2.5.0",
+    "hugeicons-react": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
