--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "hamburger-react": "^2.5.0",
     "hugeicons-react": "^0.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
