--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@mui/x-date-pickers": "^7.3.1",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.11",
     "hamburger-react": "^2.5.0",
     "hugeicons-react": "^0.2.0",
     "react": "^18.2.0",
