--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
     "classnames": "^2.5.1",
+    "date-fns": "^3.6.0",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
+    "react-currency-input-field": "^3.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
