--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "date-fns": "^3.6.0",
     "hamburger-react": "^2.5.0",
@@ -24,7 +25,8 @@
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
