--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.8.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
