chore(admin): Dashboard screen content

--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
+    "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "hamburger-react": "^2.5.0",
+    "lucide-react": "^0.379.0",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.8.0",
     "react-datepicker": "^6.9.0",
@@ -28,6 +31,9 @@
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
+    "shadcn-ui": "^0.8.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
     "yup": "^1.4.0"
   },
