--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "hamburger-react": "^2.5.0",
+    "iconsax-react": "^0.0.8",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
     "react-currency-input-field": "^3.8.0",
