--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.15",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@remixicon/react": "^4.2.0",
+    "@tanstack/react-table": "^8.17.3",
     "@tremor/react": "^3.17.2",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
@@ -28,6 +32,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "hamburger-react": "^2.5.0",
+    "humanize-list": "^1.0.1",
     "iconsax-react": "^0.0.8",
     "lodash": "^4.17.21",
     "lucide-react": "^0.379.0",
