--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
-    "react-youtube": "^10.1.0",
+    "react-to-print": "^2.15.1",
     "shadcn-ui": "^0.8.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
