--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-spinners": "^0.13.8",
     "react-to-print": "^2.15.1",
     "shadcn-ui": "^0.8.0",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^9.0.1",
