--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.3",
+    "react-number-format": "^5.4.0",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.0",
     "react-spinners": "^0.13.8",
