--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-currency-input-field": "^3.8.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.51.3",
     "react-router-dom": "^6.23.0",
