--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.379.0",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-currency-input-field": "^3.8.0",
     "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
