--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/x-charts": "^7.11.0",
     "@mui/x-date-pickers": "^7.8.0",
     "@paystack/inline-js": "^2.18.1",
+    "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
