--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
 		"@radix-ui/react-separator": "^1.0.3",
 		"@radix-ui/react-slot": "^1.0.2",
 		"@radix-ui/react-tabs": "^1.1.0",
+		"@radix-ui/react-toggle": "^1.1.0",
+		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@remixicon/react": "^4.2.0",
 		"@tanstack/react-table": "^8.17.3",
 		"@tremor/react": "^3.17.2",
