--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"react-to-print": "^2.15.1",
 		"shadcn-ui": "^0.8.0",
 		"sonner": "^1.5.0",
+		"swiper": "^11.1.9",
 		"tailwind-merge": "^2.3.0",
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^9.0.1",
