--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"react-hook-form": "^7.51.3",
 		"react-number-format": "^5.4.0",
 		"react-paginate": "^8.2.0",
+		"react-quill": "^2.0.0",
 		"react-router-dom": "^6.23.0",
 		"react-spinners": "^0.13.8",
 		"react-to-print": "^2.15.1",
