--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@remixicon/react": "^4.2.0",
 		"@tanstack/react-table": "^8.17.3",
 		"@tremor/react": "^3.17.2",
+		"@wojtekmaj/react-hooks": "^1.21.0",
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.0",
 		"classnames": "^2.5.1",
@@ -57,6 +58,7 @@
 		"react-hook-form": "^7.51.3",
 		"react-number-format": "^5.4.0",
 		"react-paginate": "^8.2.0",
+		"react-pdf": "^9.1.0",
 		"react-quill": "^2.0.0",
 		"react-router-dom": "^6.23.0",
 		"react-spinners": "^0.13.8",
@@ -81,6 +83,7 @@
 		"eslint-plugin-react-refresh": "^0.4.6",
 		"postcss": "^8.4.38",
 		"tailwindcss": "^3.4.3",
-		"vite": "^5.2.0"
+		"vite": "^5.2.0",
+		"vite-plugin-static-copy": "^1.0.6"
 	}
 }
