--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"hamburger-react": "^2.5.0",
 		"humanize-list": "^1.0.1",
 		"iconsax-react": "^0.0.8",
+		"js-cookie": "^3.0.5",
 		"lodash": "^4.17.21",
 		"lucide-react": "^0.379.0",
 		"react": "^18.2.0",
