--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-table": "^8.17.3",
 		"@tremor/react": "^3.17.2",
+		"@vercel/analytics": "^1.3.2",
 		"@wojtekmaj/react-hooks": "^1.21.0",
 		"axios": "^1.6.8",
 		"class-variance-authority": "^0.7.0",
